src/base/objects/Incident__c/fields/Incident_Severity__c.field-meta.xml
<CustomField>
    <fullName>Incident_Severity__c</fullName>
    <label>Incident Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>