src/base/objects/Incident__c/fields/Missing_Feature__c.field-meta.xml
<CustomField>
    <fullName>Missing_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Feature</label>
    <type>Checkbox</type>
</CustomField>