src/base/objects/Incident__c/fields/Process_Failure__c.field-meta.xml
<CustomField>
    <fullName>Process_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Failure</label>
    <type>Checkbox</type>
</CustomField>