src/base/objects/Incident__c/fields/Product_Failure__c.field-meta.xml
<CustomField>
    <fullName>Product_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Failure</label>
    <type>Checkbox</type>
</CustomField>