src/base/objects/Incident__c/fields/Protocol_s__c.field-meta.xml
<CustomField>
    <fullName>Protocol_s__c</fullName>
    <label>Protocol(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protocol_List</valueSetName>
    </valueSet>
</CustomField>