src/base/objects/Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Incident_Severity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>